--- a/firefox/package.json
+++ b/firefox/package.json
@@ -1,8 +1,8 @@
 {
-  "title": "My Jetpack Addon",
-  "name": "testaddon",
-  "version": "0.0.1",
-  "description": "A basic add-on",
+  "title": "DestinyItemManager",
+  "name": "DIM",
+  "version": "3.0.0",
+  "description": "Destiny Item Manager - Firefox app",
   "main": "index.js",
   "author": "",
   "engines": {
