--- a/firefox/package.json
+++ b/firefox/package.json
@@ -1,5 +1,5 @@
 {
-  "title": "DestinyItemManager",
+  "title": "destinyitemmanager",
   "name": "DIM",
   "version": "3.0.0",
   "description": "Destiny Item Manager - Firefox app",
